opam-version: "2.0"
name: "coq-isla"
maintainer: "Michael Sammler <sammler@mpi-sws.org>"
authors: "The isla-coq Team"
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/isla-coq"
bug-reports: "https://github.com/rems-project/isla-coq/issues"
dev-repo: "git+https://github.com/rems-project/isla-coq.git"

synopsis: "Coq formalization of isla"

depends: [
  "coq" { (>= "8.13.2" & < "8.15~") | (= "dev") }
  "refinedc" { (= "dev.2021-09-22.2.1ebaee7b") | (= "dev") }
  "coq-record-update" { (= "0.3.0") | (= "dev") }
  "cmdliner" {>= "1.0.4"}
  "pprint"
  "dune" {>= "2.7.0"}
  "pprint" {>= "20171003"}
  "menhir" {build}
  "ott" {>= "0.31" & build}
  "isla-lang"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
