opam-version: "2.0"
name: "islaris"
maintainer: "Michael Sammler <sammler@mpi-sws.org>"
authors: "The Islaris Team"
license: "BSD-3-Clause"
homepage: "https://github.com/rems-project/islaris"
bug-reports: "https://github.com/rems-project/islaris/issues"
dev-repo: "git+https://github.com/rems-project/islaris.git"

synopsis: "Islaris assembly verification tool"

depends: [
  "coq" { (= "8.19.0") | (= "dev") }
  "coq-lithium" { (= "dev.2024-03-12.0.de68b772") | (= "dev") }
  "coq-stdpp-unstable"
  "coq-record-update" { (= "0.3.3") | (= "dev") }
  "cmdliner" {>= "1.1.0"}
  "pprint"
  "integers"
  "dune" {= "3.9.1"} # dune updates like to break things so we fix a version
  "pprint" {>= "20171003"}
  "menhir" {build}
  "ott" {>= "0.31" & build}
  "isla-lang"
]

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
