(executable
 (name main)
 (public_name islaris)
 (package islaris)
 (flags (:standard -warn-error -A -w -27 -w -26))
 (foreign_stubs (language c) (names stubs))
 (libraries cmdliner pprint integers str unix threads isla-lang))

(rule
 (targets version.ml)
 (action
  (with-stdout-to version.ml
    (run ocaml unix.cma %{dep:tools/gen_version.ml})))
 (mode fallback))
