(coq.theory
 (name isla)
 (package islaris)
 (flags -w -notation-overridden -w -redundant-canonical-projection)
 (synopsis "Coq Isla")
 (theories ))

(rule
 (target isla-lang.share)
 (action (with-stdout-to %{target} (system "opam var isla-lang:share"))))

(rule
 (target isla_lang.v)
 (action
  (copy "%{read-lines:isla-lang.share}/isla_lang.v" %{target})))
